<resources>
    <string name="app_name">raid_tracker_appli</string>
    <string name="input_password">Mot de passe</string>
    <string name="input_password2">Confirmation</string>
    <string name="input_username">User</string>
    <string name="input_login">Login</string>
    <string name="newraid">Création d\'un nouveau raid</string>
    <string name="join">Rejoins-nous !</string>
    <string name="inscription">Inscription</string>
    <string name="create_account">Créer un compte</string>
    <string name="description"> Raid aventure \nRejoignez l\'aventure</string>
    <string name="raidsorganisateur">Vos raids en tant qu\'organisateur : </string>
    <string name="raidbenevole">Vos raids ou vous etes inscrits en tant que bénévole : </string>
    <string name="listeraid">Voici la liste des raids que vous pouvez rejoindre en tant que bénévole : </string>
    <string name="already_account">Vous avez déjà un compte ?</string>
    <string name="input_pseudo">Identifiant</string>
    <string name="input_prenom"> Prenom</string>
    <string name="input_mail">Adresse email</string>
    <string name="new_account">Créer le compte</string>
    <string name="new_account2">Pas encore de compte ?</string>
    <string name="cancel">Annuler</string>
    <string name="name_raid">Nom du RAID</string>
    <string name="valide">Valider </string>
    <string name="date">Selectionnez une date</string>
    <string name="input_location">Lieu</string>
    <string name="input_team">Equipe</string>
    <string name="connect">Se connecter</string>
    <string name="input_insc_conne">S\'inscrire \/ \n Se connecter</string>
    <string name="raid_orga_vide">\n Aucun raid organisateur n\'est disponible</string>
    <string name="raid_bene_vide">\n Aucun raid bénévole n\'est disponible</string>
    <string name="input_inscription">S\'inscrire</string>
    <string name="input_connexion">Se connecter</string>
    <string name="ou">ou</string>
    <string name="motdepasseoublie">Mot de passe oublié ?</string>
    <string name="subscribe">Rejoignez un RAID en tant \nque bénévole dès aujourd\'hui :</string>
    <string name="input_nom">Nom </string>
    <string name="edition">Numéro de l\'édition</string>
    <string name="presentation">Raid Tracker,\nune application pour\ngérer tous les raids </string>
    <string name="connexion"> Se connecter </string>
    <string name="validsport">Valider les sports</string>
    <string name="choosesports">Les sports </string>
    <string name="Landing">Page personnelle</string>

    <!--Activity course-->
    <string name="Listeparcours">Voici la liste de vos parcours :</string>
    <string name="mapparcours">Voici la map qui résume vos parcours :</string>
    <string name="Ajoutparcours">Ajouter un\nparcours</string>
    <string name="Course">Page de gestion d\'un raid</string>

    <string name="Home">Page d\'accueil</string>
    <string name="Deconnexion">Deconnexion</string>

    <string name="bievenue">Bienvenue sur l\'application de gestion \nd\'évenements sportifs!</string>
    <string name="bievenue2">Bienvenue sur l\'application de gestion d\'évenements sportifs!</string>
    <string name="raiddispo">Vous trouverez ici une liste des évènements qui ont besoin de bénévoles.\nMerci de vous connecter ou de vous inscrire pour les rejoindre !</string>
    <string name="Ajoutraid">Ajouter \nun raid</string>
    <string-array name="sports">
        <item>Kayak</item>
        <item>Vélo</item>
        <item>Course à pied</item>
        <item>Natation</item>
    </string-array>
    <string name="appbar_scrolling_view_behavior">Je ne sais pas ce que tu fais</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Activity Edit Poste -->
    <string name="nompostes">Nom du poste</string>
    <string name="nombrebene">Nombre de bénévoles au poste :</string>
    <string name="debut">Date et heure de debut du poste</string>
    <string name="fin">Date et heure de fin du poste</string>
    <string name="mission">Mission du poste :</string>
</resources>
