<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context=".CreateAccount"
    android:background="@color/Blancnacre">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/subscribe"

                android:textSize="24sp" />

            <EditText
                android:id="@+id/identifiant"
                android:layout_marginTop="15dp"
                android:layout_width="300dp"
                android:drawablePadding="5dp"
                android:layout_height="50dp"
                android:text="User"
                android:hint="@string/input_pseudo"
                android:drawableStart="@drawable/client"
                android:background="@drawable/border"
                />

            <EditText
                android:id="@+id/prenom"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/input_prenom"
                android:background="@drawable/border"
                />

            <EditText
                android:id="@+id/nom"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/input_nom"
                android:background="@drawable/border"
                />

            <EditText
                android:id="@+id/mail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/input_mail"
                android:background="@drawable/border"
                />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:inputType="textPassword"
                android:text="Password"
                android:hint="@string/input_password"
                android:drawableLeft="@drawable/cadena"
                android:drawablePadding="5dp"
                 />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                        <Button
                            android:id="@+id/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:onClick="cancel"
                            android:text="@string/cancel" />

                        <Button
                            android:id="@+id/createAccount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:onClick="login"
                            android:text="@string/new_account" />

                </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>