<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/VertPrimaire"
            android:minHeight="?attr/actionBarSize"
            app:title="Ceci est un test" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left">
        <include layout="@layout/drawer"/>

    </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/Blancnacre"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/Blancnacre"
                    android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@color/Blancnacre"
                    android:orientation="vertical">



            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/already_account"
                android:textSize="21sp" />

                <EditText
                    android:id="@+id/login"
                    android:layout_marginTop="15dp"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/input_pseudo"
                    android:drawableStart="@drawable/client"
                    android:background="@drawable/border"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:drawablePadding="5dp"
                    android:layout_height="50dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/cadena"
                    android:background="@drawable/border"
                    />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:background="@color/Blancnacre"
                        android:layout_gravity="right"
                        android:orientation="horizontal">



                    </LinearLayout>
                </LinearLayout>

                <!--<RelativeLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content">-->
                    <!--&lt;!&ndash;<Button&ndash;&gt;-->
                        <!--&lt;!&ndash;android:id="@+id/loginbutton"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:layout_marginStart="20dp"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:background="@drawable/chevron"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:maxHeight="20dp"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:maxWidth="20dp"&ndash;&gt;-->
                        <!--&lt;!&ndash;android:onClick="login_connexion"&ndash;&gt;-->
                         <!--&lt;!&ndash;/>&ndash;&gt;-->

                        <!--<ImageView-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:background="@drawable/chevron"-->
                            <!--android:maxWidth="50dp"-->
                            <!--android:maxHeight="50dp"-->
                            <!--android:onClick="login_connexion"/>-->
                <!--</RelativeLayout>-->

            <TextView
                android:id="@+id/text2"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/create_account"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/pseudo"
                android:layout_marginTop="15dp"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/input_pseudo"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/client"
                android:background="@drawable/border"
                />

            <EditText
                android:id="@+id/prenom"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/input_prenom"
                android:background="@drawable/border"
                />
                    <EditText
                        android:id="@+id/nom"
                        android:layout_width="300dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/input_nom"
                        android:background="@drawable/border"
                        />

            <EditText
                android:id="@+id/mail"
                android:layout_marginTop="10dp"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/input_mail"
                android:background="@drawable/border"
                />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:background="@drawable/border"
                android:inputType="textPassword"
                android:hint="@string/input_password"
                android:drawableLeft="@drawable/cadena"
                android:drawablePadding="5dp"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:onClick="cancel"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:onClick="login_connexion"
                    android:text="@string/new_account" />

            </LinearLayout>
            </LinearLayout>
            </ScrollView>
        </LinearLayout>


</android.support.v4.widget.DrawerLayout>